--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "Layout for phone directory",
   "main": "gulpfile.js",
-  "dependencies": {},
+  "dependencies": {
+    "hoek": "^5.0.3"
+  },
   "devDependencies": {
     "browser-sync": "^2.24.5",
     "emitter-steward": "^1.0.0",
